force-app/main/default/src/objects/HealthCloudGA__CustomFieldSets__c/HealthCloudGA__CustomFieldSets__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Custom Field Sets</label>
</CustomObject>