force-app/main/default/src/objects/HealthCloudGA__CustomFieldSets__c/fields/HealthCloudGA__FieldSetLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FieldSetLabel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Set Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>