force-app/main/default/src/objects/HealthCloudGA__CustomFieldSets__c/fields/HealthCloudGA__SObjectName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SObjectName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SObject Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>