force-app/main/default/src/objects/HealthCloudGA__CustomFieldSets__c/fields/HealthCloudGA__TwoColumnLayout__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TwoColumnLayout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two Column Layout</label>
    <type>Checkbox</type>
</CustomField>